<resources>
    <string name="app_name">Talkie</string>
    <string name="profile_image">Profile Image</string>
    <string name="general">General</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="most_popular">Most Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="favourite">Favourite</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="dummy_name">Paul McCartney</string>
    <string name="dummy_email">paul.cartney@gmail.com</string>
    <string name="item_description">Movie Poster</string>
    <string name="vote_count_icon">vote count icon</string>
    <string name="action_delete">Delete</string>
    <string name="view_as">View As</string>
    <string name="enqueue_work">Enqueue Work</string>
    <string name="cancel_work">Cancel Work</string>
    <string name="work_manager">Work Manager</string>

    <string name="periodic_interval">"Periodic Interval: "</string>
    <string name="override_deadline">"Override Deadline: "</string>
    <string name="seekbar_label">%1$d s</string>
    <string name="not_set">Not Set</string>
    <string name="no_interval_toast">Please set a periodic interval</string>
    <string name="job_scheduled">Job Scheduled</string>
    <string name="jobs_canceled">Jobs Canceled</string>
    <string name="job_service">Job Service</string>
    <string name="job_running">Your Job is running!</string>
    <string name="required_network_type">Required Network Type:</string>
    <string name="no_network">None</string>
    <string name="any_network">Any</string>
    <string name="wifi_network">Wifi</string>
    <string name="requires">Requires:</string>
    <string name="device_idle">Device Idle</string>
    <string name="device_charging">Device Charging</string>
    <string name="periodic">Periodic:</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_jobs">Cancel Jobs</string>
    <string name="no_constraint_toast">Please set at least one constraint</string>
    <string name="job_scheduler">Job Scheduler</string>
    <string name="random_movie">Random Movie</string>
    <string name="favourite_paged">Favourite Paged</string>
</resources>
